[package]
name = "appcicd"
description = "Continuous Integration and Delivery (CI/CD) tool for Android applications 🚀"
version = "0.1.0"
authors = ["George <peraldonamoc@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/georgegiosue/appcicd"
license-file = "LICENSE"
keywords = [
    "appcicd",
    "android",
    "ci",
    "cd",
    "cicd",
    "continuous integration",
    "continuous delivery",
    "tool",
    "cli",
    "command line",
    "github",
    "actions",
    "github actions",
    "github command line interface",
]
categories = [
    "development-tools",
    "cli",
    "android",
    "continuous-integration",
    "continuous-delivery",
]
include = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["unicode", "env", "derive"] }
rand = "0.8.5"
